--- a/conf/modules.config
+++ b/conf/modules.config
@@ -25,11 +25,42 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
-
-    withName: FASTQC {
-        ext.args = '--quiet'
+    withName: SAMTOOLS_MPILEUP {
+        ext.args   = "-A --ignore-RG -B -Q ${params.mpileup_qual} -q 1 -I "
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            mode: params.publish_dir_mode
+        ]
     }
-
+    withName: BCFTOOLS_MPILEUP {
+        ext.args   = "-A --ignore-RG -B -Q ${params.mpileup_qual} -q 1 -I "
+        ext.args2   = "-vc  "
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: WIN_GENERATOR {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: ESTIMATE_SEX {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: MERGE_SNP {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            mode: params.publish_dir_mode
+        ]
+    }
     withName: CUSTOM_DUMPSOFTWAREVERSIONS {
         publishDir = [
             path: { "${params.outdir}/pipeline_info" },
@@ -38,4 +69,15 @@ process {
         ]
     }
 
+}
+//
+// Don't publish results for these processes
+//
+process {    
+    withName: 'GREP_SAMPLENAME|GETCHROMSIZES' {
+        publishDir = [
+            path: { "${params.outdir}/test" },
+            enabled: false
+        ]
+    }
 }
