--- a/nextflow.config
+++ b/nextflow.config
@@ -13,11 +13,86 @@ params {
     // Input options
     input                      = null
 
+    // Swiches
+    runWithCrest               = false
+    runQualityCheckOnly        = false
+    runWithFakeControl         = false
+    allowMissingSVFile         = true
+    sv                         = true
+    runWithCrest               = true 
+
+    // Mpileup Options
+    mpileup_qual               = 0 
+    
+    // Phasing options
+    minHT                      = 5
+
+    // SNV Merge filter
+    snp_min_coverage           = 5
+
+    // Annotate CNV files
+    min_X_ratio                = 0.8
+    min_Y_ratio                = 0.12
+
+    // CNV Merge filter
+    cnv_min_coverage           = 5000
+    mapping_quality            = 1000
+    min_windows                = 5
+
+    // correctGC options
+    LOWESS_F                   = 0.1
+    SCALE_FACTOR               = 0.9
+    COVERAGEPLOT_YLIMS         = 4
+    GC_bias_json_key           = "gc-bias"
+
+    //getBreakpointsAndMergeCrest/datatablePSCBSgaps options
+    min_DDI_length             = 1000
+    selSVColumn                = "eventScore"
+
+    // getSegmentsAndSnps/pscbsAll 
+    min_seg_width              = 2000
+    undo_SD                    = 24
+    pscbs_prune_height         = 0
+
+    // markSegsWithHomozygDel
+    min_segment_map            = 0.6
+
+    // clusterAndPruneSegments
+    min_seg_length_prune       = 9000
+    min_num_SNPs               = 15
+    clustering                 = "yes"
+    min_cluster_number         = 1
+    min_membership             = 0.8
+    min_distance               = 0.05
+
+    // estimatePurityPloidy
+    minLim                     = 0.47
+    maxLim                     = 0.53
+    min_length_purity          = 1000000
+    min_hetSNPs_purity         = 500
+    dh_stop                    = "max"
+    min_length_dh_stop         = 1000000
+    dh_zero                    = "no"
+    purity_min                 = 0.3
+    purity_max                 = 1.0
+    ploidy_min                 = 1.0
+    ploidy_max                 = 6.5
+    local_minium_upper_boundary_shift = 0.1
+
+    // generate plots
+    ymaxcov_threshold          = 8.0
 
     // References
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes'
     igenomes_ignore            = false
+
+    // refgenie References options
+    refgenie_ignore            = false
+    refgenie_base              = "/omics/groups/OE0608/internal/kubran/"
+
+    // files
+
     // MultiQC options
     multiqc_config             = null
     multiqc_title              = null
@@ -141,8 +216,14 @@ profiles {
         executor.cpus          = 16
         executor.memory        = 60.GB
     }
-    test      { includeConfig 'conf/test.config'      }
-    test_full { includeConfig 'conf/test_full.config' }
+    test              { includeConfig 'conf/test.config'              }
+    dkfz_cluster_hg37 { includeConfig 'conf/dkfz_cluster_hg37.config' }
+    dkfz_cluster_hg38 { includeConfig 'conf/dkfz_cluster_hg38.config' }
+    dkfz_cluster_test { includeConfig 'conf/dkfz_cluster_test.config' }   
+    test_full         { includeConfig 'conf/test_full.config'         }
+    test_igenomes_38  { includeConfig 'conf/test_igenomes_38.config'  }
+    test_refgenie_38  { includeConfig 'conf/test_refgenie_38.config'  }
+    test_refgenie_37  { includeConfig 'conf/test_refgenie_37.config'  }
 }
 
 
@@ -153,6 +234,12 @@ if (!params.igenomes_ignore) {
     params.genomes = [:]
 }
 
+// Load refgenie build genome_config.yaml file
+if (!params.refgenie_ignore) {
+    includeConfig 'conf/refgenie.config'
+} else {
+    params.genomes = [:]
+}
 
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
 // The JULIA depot path has been adjusted to a fixed path `/usr/local/share/julia` that needs to be used for packages in the container.
