--- a/conf/dkfz_cluster_hg38.config
+++ b/conf/dkfz_cluster_hg38.config
@@ -34,6 +34,10 @@ params {
     chr_prefix                 = "chr"
     //contig_file              = "assets/GRCh38_decoy_ebv_phiX_alt_hla_chr.contig.bed"
 
+    // Beagle reference
+    beagle_reference           = "${params.data_path}/tools_data/Beagle/1000genomes"
+    beagle_genetic_map         = "${params.data_path}/databases/genetic_maps"
+
     // Annotation files
     dbsnp_snv                  = "${params.data_path}/databases/dbSNP/dbSNP_151_GRCh38.p7/00-All_v151_GRCh38.SNV.vcf.gz"
     mapability_file            = "${params.data_path}/stats/mappability_m2e2/GRCh38_Mappability_Align_100mer_m2e2.ALT_HLA.bedGraph.gz"
