--- a/conf/modules.config
+++ b/conf/modules.config
@@ -29,6 +29,7 @@ process {
         ext.args   = "-A --ignore-RG -B -Q ${params.mpileup_qual} -q 1 -I "
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
+            pattern: "{noting}",
             mode: params.publish_dir_mode
         ]
     }
@@ -37,6 +38,7 @@ process {
         ext.args2   = "-vc  "
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
+            pattern: "{noting}",
             mode: params.publish_dir_mode
         ]
     }
@@ -44,6 +46,7 @@ process {
         ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
+            pattern: "{noting}",
             mode: params.publish_dir_mode
         ]
     }
@@ -54,7 +57,21 @@ process {
             mode: params.publish_dir_mode
         ]
     }
-    withName: MERGE_SNP {
+    withName: BEAGLE5_BEAGLE {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: CREATE_FAKE_SAMPLES {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: 'MERGE_SNP|MERGE_CNV|ANNOTATE_CNV' {
         ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
