--- a/conf/modules.config
+++ b/conf/modules.config
@@ -50,7 +50,7 @@ process {
             mode: params.publish_dir_mode
         ]
     }
-    withName: ESTIMATE_SEX {
+    withName: 'ESTIMATE_SEX|ADD_HAPLOTYPES' {
         ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
@@ -61,6 +61,7 @@ process {
         ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
+            pattern: "{noting}",
             mode: params.publish_dir_mode
         ]
     }
@@ -68,6 +69,29 @@ process {
         ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
+            pattern: "{noting}",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: 'EMBED_HAPLOTYPES|CREATE_UNPHASED' {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            pattern: "{noting}",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: 'GC_BIAS|CONVERT_TO_JSON' {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}/gc_bias"},
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: CREATE_BAF_PLOTS {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}/baf_plots"},
             mode: params.publish_dir_mode
         ]
     }
