--- a/nextflow.config
+++ b/nextflow.config
@@ -12,6 +12,7 @@ params {
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
     input                      = null
+    outdir                     = 'results'
 
     // Swiches
     runWithCrest               = false
@@ -40,10 +41,10 @@ params {
     min_windows                = 5
 
     // correctGC options
-    LOWESS_F                   = 0.1
-    SCALE_FACTOR               = 0.9
-    COVERAGEPLOT_YLIMS         = 4
-    GC_bias_json_key           = "gc-bias"
+    lowess_f                   = 0.1
+    scale_factor               = 0.9
+    covplot_tlims              = 4
+    gc_bias_json_key           = "gc-bias"
 
     //getBreakpointsAndMergeCrest/datatablePSCBSgaps options
     min_DDI_length             = 1000
