breakpoints_segments subworkflow is ready

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -50,10 +50,19 @@ process {
             mode: params.publish_dir_mode
         ]
     }
-    withName: 'ESTIMATE_SEX|ADD_HAPLOTYPES' {
+    withName: 'ESTIMATE_SEX' {
         ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
+            pattern: "*{.txt}",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: 'ADD_HAPLOTYPES' {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}/phasing"},
+            pattern: "*{.tab.gz}",
             mode: params.publish_dir_mode
         ]
     }
@@ -73,6 +82,46 @@ process {
             mode: params.publish_dir_mode
         ]
     }
+    withName: GROUP_HAPLOTYPES {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            pattern: "{noting}",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: DEFINE_BREAKPOINTS {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            pattern: "*{.txt.gz,.txt.gz.tbi,.pdf,.txt}",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: CLUSTER_SEGMENTS {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            pattern: "*{.txt.gz,.txt.gz.tbi,.txt}",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: "HOMOZYGOUS_DELETIONS|SEGMENTS_TO_DATA" {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            pattern: "*{.txt.gz}",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: PSCBS_SEGMENTATION {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            pattern: "*{.txt}",
+            mode: params.publish_dir_mode
+        ]
+    }
     withName: 'EMBED_HAPLOTYPES|CREATE_UNPHASED' {
         ext.args   = ""
         publishDir = [
@@ -85,13 +134,39 @@ process {
         ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}/gc_bias"},
+            pattern: "*{png,txt,tsv,json,tab.gz,txt.gz}",
             mode: params.publish_dir_mode
         ]
     }
-    withName: CREATE_BAF_PLOTS {
+    withName: 'CREATE_BAF_PLOTS' {
         ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}/baf_plots"},
+            pattern: "*{.png}",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: 'CREATE_BAF_PLOTS' {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            pattern: "*{.txt,.json}",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: GENERATE_PLOTS {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}/plots"},
+            pattern: "*{.png}",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: "ESTIMATE_PEAKS|ESTIMATE_PURITY_PLOIDY" {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            pattern: "*{.txt}",
             mode: params.publish_dir_mode
         ]
     }
@@ -115,7 +190,7 @@ process {
 // Don't publish results for these processes
 //
 process {    
-    withName: 'GREP_SAMPLENAME|GETCHROMSIZES' {
+    withName: 'GREP_SAMPLENAME|GETCHROMSIZES|GROUP_HAPLOTYPES' {
         publishDir = [
             path: { "${params.outdir}/test" },
             enabled: false
