--- a/nextflow.config
+++ b/nextflow.config
@@ -69,7 +69,7 @@ params {
     minLim                     = 0.47
     maxLim                     = 0.53
     min_length_purity          = 1000000
-    min_hetSNPs_purity         = 500
+    min_hetSNPs_purity         = 0       // default 500 !!
     dh_stop                    = "max"
     min_length_dh_stop         = 1000000
     dh_zero                    = "no"
