--- a/conf/dkfz_cluster_hg38.config
+++ b/conf/dkfz_cluster_hg38.config
@@ -53,6 +53,9 @@ params {
 
     // get breakpoints/ PSCBS gaps
     centromer_file             = "${params.data_path}/stats/gap_with_centromeres.header.txt"
+
+    // HDR estimation
+    blacklist_file             = "assets/artifact.homoDels.potentialArtifacts.hg38.txt"
  }
 
 // Perform work directory cleanup when the run has succesfully completed
