--- a/conf/modules.config
+++ b/conf/modules.config
@@ -162,6 +162,14 @@ process {
             mode: params.publish_dir_mode
         ]
     }
+    withName: GENERATE_PLOTS {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            pattern: "*{.txt}",
+            mode: params.publish_dir_mode
+        ]
+    }
     withName: "ESTIMATE_PEAKS|ESTIMATE_PURITY_PLOIDY" {
         ext.args   = ""
         publishDir = [
