--- a/nextflow.config
+++ b/nextflow.config
@@ -20,6 +20,7 @@ params {
     runWithFakeControl         = false
     allowMissingSVFile         = true
     runWithCrest               = true 
+    legacyMode                 = true
 
     // Mpileup Options
     mpileup_qual               = 0 
