HDR estimation module is done

--- a/conf/dkfz_cluster_hg38.config
+++ b/conf/dkfz_cluster_hg38.config
@@ -56,6 +56,7 @@ params {
 
     // HDR estimation
     blacklist_file             = "assets/artifact.homoDels.potentialArtifacts.hg38.txt"
+    cytobands_file             = "assets/hg38_cytoBand.txt"
  }
 
 // Perform work directory cleanup when the run has succesfully completed
