beagle reference problem resolved

--- a/conf/dkfz_cluster_hg38.config
+++ b/conf/dkfz_cluster_hg38.config
@@ -43,6 +43,8 @@ params {
     // Beagle reference
     beagle_reference           = "${params.data_path}/tools_data/Beagle/1000genomes"
     beagle_genetic_map         = "${params.data_path}/databases/genetic_maps"
+    beagle_ref_ext             = "bref3" // vcf | bref | bref3
+    beagle_map_ext             = "CHR.map"
 
     // Annotation files
     dbsnp_snv                  = "${params.data_path}/databases/dbSNP/dbSNP_151_GRCh38.p7/00-All_v151_GRCh38.SNV.vcf.gz"
