--- a/conf/modules.config
+++ b/conf/modules.config
@@ -62,7 +62,6 @@ process {
         ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}/phasing"},
-            pattern: "*{.tab.gz}",
             mode: params.publish_dir_mode
         ]
     }
@@ -86,7 +85,6 @@ process {
         ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
-            pattern: "{noting}",
             mode: params.publish_dir_mode
         ]
     }
@@ -110,7 +108,7 @@ process {
         ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
-            pattern: "*{.txt.gz}",
+            pattern: "*{.txt.gz,.txt.gz.tbi}",
             mode: params.publish_dir_mode
         ]
     }
@@ -142,15 +140,6 @@ process {
         ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}/baf_plots"},
-            pattern: "*{.png}",
-            mode: params.publish_dir_mode
-        ]
-    }
-    withName: 'CREATE_BAF_PLOTS' {
-        ext.args   = ""
-        publishDir = [
-            path:  {"${params.outdir}/${meta.id}"},
-            pattern: "*{.txt,.json}",
             mode: params.publish_dir_mode
         ]
     }
@@ -178,10 +167,11 @@ process {
             mode: params.publish_dir_mode
         ]
     }
-    withName: 'MERGE_SNP|MERGE_CNV|ANNOTATE_CNV' {
+    withName: 'MERGE_SNP|MERGE_CNV' {
         ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
+            pattern: "{tab.gz,tab.gz.tbi}",
             mode: params.publish_dir_mode
         ]
     }
@@ -198,7 +188,7 @@ process {
 // Don't publish results for these processes
 //
 process {    
-    withName: 'GREP_SAMPLENAME|GETCHROMSIZES|GROUP_HAPLOTYPES' {
+    withName: 'GREP_SAMPLENAME|GETCHROMSIZES|ANNOTATE_CNV' {
         publishDir = [
             path: { "${params.outdir}/test" },
             enabled: false
