--- a/nextflow.config
+++ b/nextflow.config
@@ -70,11 +70,11 @@ params {
     minLim                     = 0.47
     maxLim                     = 0.53
     min_length_purity          = 1000000
-    min_hetSNPs_purity         = 0       // default 500 !!
+    min_hetSNPs_purity         = 5000    
     dh_stop                    = "max"
     min_length_dh_stop         = 1000000
     dh_zero                    = "no"
-    purity_min                 = 0.3
+    purity_min                 = 0.15
     purity_max                 = 1.0
     ploidy_min                 = 1.0
     ploidy_max                 = 6.5
