--- a/conf/modules.config
+++ b/conf/modules.config
@@ -42,15 +42,15 @@ process {
             mode: params.publish_dir_mode
         ]
     }
-    withName: WIN_GENERATOR {
+    withName: 'ADD_HAPLOTYPES' {
         ext.args   = ""
         publishDir = [
-            path:  {"${params.outdir}/${meta.id}"},
-            pattern: "{noting}",
+            path:  {"${params.outdir}/${meta.id}/phasing"},
+            pattern: "*{.tab.gz,.tab.gz.tbi}",
             mode: params.publish_dir_mode
         ]
     }
-    withName: 'ESTIMATE_SEX' {
+    withName: 'ADD_CREST|ADD_SVS' {
         ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
@@ -58,33 +58,11 @@ process {
             mode: params.publish_dir_mode
         ]
     }
-    withName: 'ADD_HAPLOTYPES' {
-        ext.args   = ""
-        publishDir = [
-            path:  {"${params.outdir}/${meta.id}/phasing"},
-            mode: params.publish_dir_mode
-        ]
-    }
-    withName: BEAGLE5_BEAGLE {
-        ext.args   = ""
-        publishDir = [
-            path:  {"${params.outdir}/${meta.id}"},
-            pattern: "{noting}",
-            mode: params.publish_dir_mode
-        ]
-    }
-    withName: CREATE_FAKE_SAMPLES {
-        ext.args   = ""
-        publishDir = [
-            path:  {"${params.outdir}/${meta.id}"},
-            pattern: "{noting}",
-            mode: params.publish_dir_mode
-        ]
-    }
     withName: GROUP_HAPLOTYPES {
         ext.args   = ""
         publishDir = [
-            path:  {"${params.outdir}/${meta.id}"},
+            path:  {"${params.outdir}/${meta.id}/haploblocks"},
+            pattern: "*{.tab}",
             mode: params.publish_dir_mode
         ]
     }
@@ -100,7 +78,7 @@ process {
         ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
-            pattern: "*{.txt.gz,.txt.gz.tbi,.txt}",
+            pattern: "*{.txt.gz,.txt.gz.tbi,.txt,.pdf}",
             mode: params.publish_dir_mode
         ]
     }
@@ -109,22 +87,6 @@ process {
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
             pattern: "*{.txt.gz,.txt.gz.tbi}",
-            mode: params.publish_dir_mode
-        ]
-    }
-    withName: PSCBS_SEGMENTATION {
-        ext.args   = ""
-        publishDir = [
-            path:  {"${params.outdir}/${meta.id}"},
-            pattern: "*{.txt}",
-            mode: params.publish_dir_mode
-        ]
-    }
-    withName: 'EMBED_HAPLOTYPES|CREATE_UNPHASED' {
-        ext.args   = ""
-        publishDir = [
-            path:  {"${params.outdir}/${meta.id}"},
-            pattern: "{noting}",
             mode: params.publish_dir_mode
         ]
     }
@@ -140,6 +102,7 @@ process {
         ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}/baf_plots"},
+            pattern: "*{png}",
             mode: params.publish_dir_mode
         ]
     }
@@ -151,6 +114,14 @@ process {
             mode: params.publish_dir_mode
         ]
     }
+    withName: 'PURITY_PLOIDY' {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}"},
+            pattern: "*{.json}",
+            mode: params.publish_dir_mode
+        ]
+    }
     withName: GENERATE_PLOTS {
         ext.args   = ""
         publishDir = [
@@ -159,7 +130,7 @@ process {
             mode: params.publish_dir_mode
         ]
     }
-    withName: "ESTIMATE_PEAKS|ESTIMATE_PURITY_PLOIDY" {
+    withName: "ESTIMATE_PEAKS|ESTIMATE_PURITY_PLOIDY|PSCBS_SEGMENTATION|ESTIMATE_HDRSCORE|ESTIMATE_SEX" {
         ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
@@ -188,7 +159,7 @@ process {
 // Don't publish results for these processes
 //
 process {    
-    withName: 'GREP_SAMPLENAME|GETCHROMSIZES|ANNOTATE_CNV' {
+    withName: 'GREP_SAMPLENAME|GETCHROMSIZES|ANNOTATE_CNV|EMBED_HAPLOTYPES|CREATE_UNPHASED|BEAGLE5_BEAGLE|CREATE_FAKE_SAMPLES|WIN_GENERATOR|MAKE_MOCK' {
         publishDir = [
             path: { "${params.outdir}/test" },
             enabled: false
