--- a/conf/test_hg37.config
+++ b/conf/test_hg37.config
@@ -5,7 +5,7 @@
     Defines input files and everything required to run a fast and simple pipeline test.
 
     Use as follows:
-        nextflow run main.nf -profile dkfz_cluster_hg38,singularity --outdir <OUTDIR>
+        nextflow run main.nf -profile test_hg37,singularity --outdir <OUTDIR>
 
 ----------------------------------------------------------------------------------------
 */
@@ -21,12 +21,11 @@ params {
     max_time   = '48.h'
 
     // Input data
-    input  = 'assets/samplesheet.csv'
+    input  = 'assets/samplesheet_37_test.csv'
 
     // workflow parameters
-    outdir                     = "results"
+    outdir                     = "results37"
 
-    // estimatePurityPloidy
     minLim                     = 0.47
     maxLim                     = 0.53
     min_length_purity          = 1000000
@@ -39,35 +38,35 @@ params {
     ploidy_min                 = 1.0
     ploidy_max                 = 6.5
     local_minium_upper_boundary_shift = 0.1
+    
 
     // Reference //
-    data_path                  = "/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg_GRCh38"
-    fasta                      = '/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg_GRCh38/sequence/GRCh38_decoy_ebv_alt_hla_phiX.fa'
-    fasta_fai                  = '/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg_GRCh38/sequence/GRCh38_decoy_ebv_alt_hla_phiX.fa.fai'
-    chrom_sizes                = '/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg_GRCh38/stats/GRCh38_decoy_ebv_alt_hla_phiX.fa.chrLenOnlyACGT_realChromosomes.tsv'
-    chr_prefix                 = "chr"
-    //contig_file              = "assets/GRCh38_decoy_ebv_phiX_alt_hla_chr.contig.bed"
+    data_path                  = "/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg19_GRCh37_1000genomes"
+    fasta                      = '/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg19_GRCh37_1000genomes/sequence/1KGRef/hs37d5.fa'
+    fasta_fai                  = '/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg19_GRCh37_1000genomes/sequence/1KGRef/hs37d5.fa.fai'
+    chrom_sizes                = '/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg19_GRCh37_1000genomes/stats/hs37d5.fa.chrLenOnlyACGT_realChromosomes.tab'
+    chr_prefix                 = ""
 
     // Beagle reference
-    beagle_reference           = "${params.data_path}/tools_data/Beagle/1000genomes"
-    beagle_genetic_map         = "${params.data_path}/databases/genetic_maps"
+    beagle_reference           = "${params.data_path}/tools_data/Beagle"
+    beagle_genetic_map         = "${params.data_path}/tools_data/genetic_maps"
     beagle_ref_ext             = "bref3" // vcf | bref | bref3
-    beagle_map_ext             = "CHR.map"
+    beagle_map_ext             = "map"
 
     // Annotation files
-    dbsnp_snv                  = "${params.data_path}/databases/dbSNP/dbSNP_151_GRCh38.p7/00-All_v151_GRCh38.SNV.vcf.gz"
-    mapability_file            = "${params.data_path}/stats/mappability_m2e2/GRCh38_Mappability_Align_100mer_m2e2.ALT_HLA.bedGraph.gz"
-    replication_time_file      = "${params.data_path}/databases/ENCODE/RepliSeq/time_mean_10KB.Rda"
-    gc_content_file            = "${params.data_path}/stats/gc_content_hg38.txt"
-    gene_annotation_file       = "${params.data_path}/tools_data/ACEseq/INFORM_druggable_genes.hg38.tsv"
+    dbsnp_snv                  = "${params.data_path}/databases/dbSNP/dbSNP_135/00-All.SNV.vcf.gz"
+    mapability_file            = "${params.data_path}/databases/UCSC/wgEncodeCrgMapabilityAlign100mer_chr.bedGraph.gz"
+    replication_time_file      = "${params.data_path}/databases/ENCODE/ReplicationTime_10cellines_mean_10KB.Rda"
+    gc_content_file            = "${params.data_path}/stats/hg19_GRch37_100genomes_gc_content_10kb.txt"
+    gene_annotation_file       = "${params.data_path}/tools_data/ACEseq/INFORM_druggable_genes.csv"
 
     // get breakpoints/ PSCBS gaps
-    centromer_file             = "${params.data_path}/stats/gap_with_centromeres.header.txt"
+    centromer_file             = "${params.data_path}/stats/hg19_gaps.txt"
 
     // HDR estimation
-    blacklist_file             = "assets/artifact.homoDels.potentialArtifacts.hg38.txt"
-    cytobands_file             = "assets/hg38_cytoBand.txt"
- }
+    blacklist_file             = "assets/artifact.homoDels.potentialArtifacts.txt"
+    cytobands_file             = "assets/hg19_cytoBand.txt"
+}
 
 // Perform work directory cleanup when the run has succesfully completed
  cleanup = true
@@ -78,7 +77,7 @@ singularity {
   enabled = true
   cacheDir = "/omics/groups/OE0608/internal/kubran/singularity"
   autoMounts = true
-  runOptions = "-B /omics/groups -B /omics/odcf/analysis -B /omics/odcf/project -B /omics/odcf/reference_data"
+  runOptions = "-B /omics/groups -B /omics/odcf/analysis -B /omics/odcf/project -B /omics/odcf/reference_data -B /omics/groups/OE0608/internal/kubran/"
 }
 env {
     SINGULARITY_CACHEDIR="/omics/groups/OE0608/internal/kubran/singularity"
@@ -97,4 +96,3 @@ executor {
   submitRateLimit = '30 sec'
   queueSize=50
   }
-
