--- a/nextflow.config
+++ b/nextflow.config
@@ -19,8 +19,8 @@ params {
     runQualityCheckOnly        = false
     runWithFakeControl         = false
     allowMissingSVFile         = true
-    runWithCrest               = true 
     legacyMode                 = true
+    estimatesex                = true
 
     // Mpileup Options
     mpileup_qual               = 0 
@@ -221,6 +221,7 @@ profiles {
     dkfz_cluster_hg38 { includeConfig 'conf/dkfz_cluster_hg38.config' }
     dkfz_cluster_test { includeConfig 'conf/dkfz_cluster_test.config' }   
     test_full         { includeConfig 'conf/test_full.config'         }
+    test_hg37         { includeConfig 'conf/test_hg37.config'         }
     test_igenomes_38  { includeConfig 'conf/test_igenomes_38.config'  }
     test_refgenie_38  { includeConfig 'conf/test_refgenie_38.config'  }
     test_refgenie_37  { includeConfig 'conf/test_refgenie_37.config'  }
