--- a/conf/dkfz_cluster_hg37.config
+++ b/conf/dkfz_cluster_hg37.config
@@ -26,6 +26,19 @@ params {
     // workflow parameters
     outdir                     = "results37"
 
+    minLim                     = 0.47
+    maxLim                     = 0.53
+    min_length_purity          = 1000000
+    min_hetSNPs_purity         = 0       // default 500 !!
+    dh_stop                    = "max"
+    min_length_dh_stop         = 1000000
+    dh_zero                    = "no"
+    purity_min                 = 0.3
+    purity_max                 = 1.0
+    ploidy_min                 = 1.0
+    ploidy_max                 = 6.5
+    local_minium_upper_boundary_shift = 0.1
+
     // Reference //
     data_path                  = "/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg19_GRCh37_1000genomes"
     fasta                      = '/omics/odcf/reference_data/legacy/ngs_share/assemblies/hg19_GRCh37_1000genomes/sequence/1KGRef/hs37d5.fa'
