fake conrrol pipeline is functional

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -50,6 +50,16 @@ process {
             mode: params.publish_dir_mode
         ]
     }
+    
+    withName: 'ANNOTATE_CNV' {
+        ext.args   = ""
+        publishDir = [
+            path:  {"${params.outdir}/${meta.id}/anno_cnv"},
+            pattern: "*{.tab.gz,.tab.gz.tbi}",
+            mode: params.publish_dir_mode
+        ]
+    }
+
     withName: 'ADD_CREST|ADD_SVS' {
         ext.args   = ""
         publishDir = [
@@ -159,7 +169,7 @@ process {
 // Don't publish results for these processes
 //
 process {    
-    withName: 'GREP_SAMPLENAME|GETCHROMSIZES|ANNOTATE_CNV|EMBED_HAPLOTYPES|CREATE_UNPHASED|BEAGLE5_BEAGLE|CREATE_FAKE_SAMPLES|WIN_GENERATOR|MAKE_MOCK' {
+    withName: 'GREP_SAMPLENAME|GETCHROMSIZES|EMBED_HAPLOTYPES|BEAGLE5_BEAGLE|CREATE_FAKE_SAMPLES|WIN_GENERATOR|MAKE_MOCK' {
         publishDir = [
             path: { "${params.outdir}/test" },
             enabled: false
