--- a/nextflow.config
+++ b/nextflow.config
@@ -222,6 +222,8 @@ profiles {
     dkfz_cluster_test { includeConfig 'conf/dkfz_cluster_test.config' }   
     test_full         { includeConfig 'conf/test_full.config'         }
     test_hg37         { includeConfig 'conf/test_hg37.config'         }
+    test_nocontrol    { includeConfig 'conf/test_nocontrol.config'    }
+    test_nocontrol_hg37 { includeConfig 'conf/test_nocontrol_hg37.config'    }
     test_igenomes_38  { includeConfig 'conf/test_igenomes_38.config'  }
     test_refgenie_38  { includeConfig 'conf/test_refgenie_38.config'  }
     test_refgenie_37  { includeConfig 'conf/test_refgenie_37.config'  }
