--- a/nextflow.config
+++ b/nextflow.config
@@ -12,13 +12,11 @@ params {
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
     input                      = null
-    outdir                     = 'results'
+    outdir                     = null
 
     // Swiches
     runWithCrest               = false
     runQualityCheckOnly        = false
-    runWithFakeControl         = false
-    allowMissingSVFile         = true
     legacyMode                 = true
     estimatesex                = true
 
