nocontrol workflow fixed

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -169,7 +169,7 @@ process {
 // Don't publish results for these processes
 //
 process {    
-    withName: 'GREP_SAMPLENAME|GETCHROMSIZES|EMBED_HAPLOTYPES|BEAGLE5_BEAGLE|CREATE_FAKE_SAMPLES|WIN_GENERATOR|MAKE_MOCK' {
+    withName: 'GREP_GENOTYPES|GETCHROMSIZES|EMBED_HAPLOTYPES|BEAGLE5_BEAGLE|CREATE_FAKE_SAMPLES|WIN_GENERATOR|MAKE_MOCK|FAKE_CONTROL|CREATE_UNPHASED' {
         publishDir = [
             path: { "${params.outdir}/test" },
             enabled: false
