--- a/nextflow.config
+++ b/nextflow.config
@@ -15,10 +15,9 @@ params {
     outdir                     = null
 
     // Swiches
-    runWithCrest               = false
     runQualityCheckOnly        = false
-    legacyMode                 = true
     estimatesex                = true
+    createbafplots             = true
 
     // Mpileup Options
     mpileup_qual               = 0 
@@ -52,6 +51,7 @@ params {
     min_seg_width              = 2000
     undo_SD                    = 24
     pscbs_prune_height         = 0
+    min_gap_length             = 500000
 
     // markSegsWithHomozygDel
     min_segment_map            = 0.6
