--- a/conf/dkfz_cluster_hg38.config
+++ b/conf/dkfz_cluster_hg38.config
@@ -55,7 +55,7 @@ params {
     beagle_map_ext             = "CHR.map"
 
     // Annotation files
-    dbsnp_snv                  = "${params.data_path}/databases/dbSNP/dbSNP_151_GRCh38.p7/00-All_v151_GRCh38.SNV.vcf.gz"
+    dbsnp_snv                  = "${params.data_path}/databases/dbSNP/00-All.SNV-noMNVs.vcf.gz"
     mapability_file            = "${params.data_path}/stats/mappability_m2e2/GRCh38_Mappability_Align_100mer_m2e2.ALT_HLA.bedGraph.gz"
     replication_time_file      = "${params.data_path}/databases/ENCODE/RepliSeq/time_mean_10KB.Rda"
     gc_content_file            = "${params.data_path}/stats/gc_content_hg38.txt"
