--- a/conf/modules.config
+++ b/conf/modules.config
@@ -148,7 +148,7 @@ process {
             mode: params.publish_dir_mode
         ]
     }
-    withName: 'MERGE_SNP|MERGE_CNV' {
+    withName: 'MERGE_SNP|MERGE_CNV|GET_GENOTYPES' {
         ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
@@ -169,7 +169,7 @@ process {
 // Don't publish results for these processes
 //
 process {    
-    withName: 'GREP_GENOTYPES|GETCHROMSIZES|EMBED_HAPLOTYPES|BEAGLE5_BEAGLE|CREATE_FAKE_SAMPLES|WIN_GENERATOR|MAKE_MOCK|FAKE_CONTROL|CREATE_UNPHASED' {
+    withName: 'GREP_GENOTYPES|GETCHROMSIZES|EMBED_HAPLOTYPES|BEAGLE5_BEAGLE|CREATE_UNPHASED|FAKE_CONTROL|GET_GENOTYPES|MAKE_MOCK|WIN_GENERATOR|CREATE_FAKE_SAMPLES' {
         publishDir = [
             path: { "${params.outdir}/test" },
             enabled: false
