--- a/nextflow.config
+++ b/nextflow.config
@@ -12,12 +12,13 @@ params {
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
     input                      = null
-    outdir                     = null
 
     // Swiches
     runQualityCheckOnly        = false
     estimatesex                = true
     createbafplots             = true
+    skip_multiqc               = false
+    legacyMode                 = true
 
     // Mpileup Options
     mpileup_qual               = 0 
@@ -90,7 +91,33 @@ params {
     refgenie_ignore            = false
     refgenie_base              = "/omics/groups/OE0608/internal/kubran/"
 
-    // files
+    // Reference //
+    data_path                  = null
+    fasta                      = null
+    fasta_fai                  = null
+    chrom_sizes                = null
+    chr_prefix                 = null // chr | ""
+    contig_file                = null
+
+    // Beagle reference
+    beagle_reference           = null
+    beagle_genetic_map         = null
+    beagle_ref_ext             = null // vcf | bref | bref3
+    beagle_map_ext             = null
+
+    // Annotation files
+    dbsnp_snv                  = null
+    mapability_file            = null
+    replication_time_file      = null
+    gc_content_file            = null
+    gene_annotation_file       = null
+
+    // get breakpoints/ PSCBS gaps
+    centromer_file             = null
+
+    // HDR estimation
+    blacklist_file             = null
+    cytobands_file             = null
 
     // MultiQC options
     multiqc_config             = null
@@ -100,6 +127,7 @@ params {
     multiqc_methods_description = null
 
     // Boilerplate options
+    outdir                     = 'results'
     tracedir                   = "${params.outdir}/pipeline_info"
     publish_dir_mode           = 'copy'
     email                      = null
