--- a/conf/test_nocontrol.config
+++ b/conf/test_nocontrol.config
@@ -55,7 +55,7 @@ params {
     beagle_map_ext             = "CHR.map"
 
     // Annotation files
-    dbsnp_snv                  = "${params.data_path}/databases/dbSNP/dbSNP_151_GRCh38.p7/00-All_v151_GRCh38.SNV.vcf.gz"
+    dbsnp_snv                  = "${params.data_path}/databases/dbSNP/00-All.SNV-noMNVs.vcf.gz"
     mapability_file            = "${params.data_path}/stats/mappability_m2e2/GRCh38_Mappability_Align_100mer_m2e2.ALT_HLA.bedGraph.gz"
     replication_time_file      = "${params.data_path}/databases/ENCODE/RepliSeq/time_mean_10KB.Rda"
     gc_content_file            = "${params.data_path}/stats/gc_content_hg38.txt"
@@ -68,8 +68,8 @@ params {
     blacklist_file             = "assets/artifact.homoDels.potentialArtifacts.hg38.txt"
     cytobands_file             = "assets/hg38_cytoBand.txt"
 
-    //No control FAKE CNV file directory
-    fake_control               = "/omics/groups/OE0608/internal/kubran/anno_cnv/hg38_male_fake_control/"
+    // No control FAKE CNV file directory
+    fake_control               = "/omics/groups/OE0608/internal/kubran/anno_cnv/hg38_male_fake_control2/"
     fake_control_prefix        = "fake"
  }
 
