--- a/conf/modules.config
+++ b/conf/modules.config
@@ -152,7 +152,7 @@ process {
         ext.args   = ""
         publishDir = [
             path:  {"${params.outdir}/${meta.id}"},
-            pattern: "{tab.gz,tab.gz.tbi}",
+            pattern: "*{tab.gz,tab.gz.tbi}",
             mode: params.publish_dir_mode
         ]
     }
