--- a/nextflow.config
+++ b/nextflow.config
@@ -41,7 +41,7 @@ params {
     // correctGC options
     lowess_f                   = 0.1
     scale_factor               = 0.9
-    covplot_tlims              = 4
+    covplot_ylims              = 4
     gc_bias_json_key           = "gc-bias"
 
     //getBreakpointsAndMergeCrest/datatablePSCBSgaps options
@@ -139,7 +139,7 @@ params {
     version                    = false
     validate_params            = true
     show_hidden_params         = false
-    schema_ignore_params       = 'genomes'
+    schema_ignore_params       = 'genomes,fake_control_prefix,annotatePlotsWithGenes'
 
 
     // Config options
