--- a/conf/base.config
+++ b/conf/base.config
@@ -52,6 +52,16 @@ process {
     withLabel:process_high_memory {
         memory = { check_max( 200.GB * task.attempt, 'memory' ) }
     }
+    withLabel:process_high_cpu_low_memory {
+        cpus   = { check_max( 6    * task.attempt, 'cpus'    ) }
+        memory = { check_max( 4.GB * task.attempt, 'memory'  ) }
+        time   = { check_max( 8.h  * task.attempt, 'time'    ) }
+    }
+    withLabel:process_low_cpu_high_memory {
+        cpus   = { check_max( 2    * task.attempt, 'cpus'    ) }
+        memory = { check_max( 16.GB * task.attempt, 'memory'  ) }
+        time   = { check_max( 8.h  * task.attempt, 'time'    ) }
+    }
     withLabel:error_ignore {
         errorStrategy = 'ignore'
     }
@@ -59,7 +69,20 @@ process {
         errorStrategy = 'retry'
         maxRetries    = 2
     }
-    withName:CUSTOM_DUMPSOFTWAREVERSIONS {
-        cache = false
+    withName:'CUSTOM_DUMPSOFTWAREVERSIONS|ESTIMATE_SEX|MAKE_MOCK|GETCHROMSIZE|CREATE_FAKE_SAMPLES|CONVERT_TO_JSON|EMBED_HAPLOTYPES|GROUP_HAPLOTYPES|ADD_HAPLOTYPES|SEGMENTS_TO_DATA|PURITY_PLOIDY' {
+        cpus            = { check_max( 1 * task.attempt, 'cpus' ) }
+        memory          = { check_max( 1.GB * task.attempt, 'memory' ) }
+    }
+    withName: 'MULTIQC' {
+        cpus            = { check_max( 4 * task.attempt, 'cpus' ) }
+        memory          = { check_max( 12.GB * task.attempt, 'memory' ) }
+    }
+    withName: 'MERGE_SNP|MERGE_CNV' {
+        cpus            = { check_max( 2 * task.attempt, 'cpus' ) }
+        memory          = { check_max( 1.GB * task.attempt, 'memory' ) }
+    }
+    withName: 'PSCBS_SEGMENTATION' {
+        cpus            = { check_max( 2 * task.attempt, 'cpus' ) }
+        memory          = { check_max( 24.GB * task.attempt, 'memory' ) }
     }
 }
